better borders, file chooser placement, rectangle selection
- borders of rectangles are now both black and white for improved visibility
- file input is now on top of canvas
- rectangle selection now works regardless of whether second point is larger than first.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <h1>Image Analyzer</h1>
     <p>Select rectangles in images and find the mean colors and their standard deviations!</p>
     <p>Data are shown in the form (R, G, B, A).</p>
+    <p>Click twice on the image to create a rectangle. Upload an image here:</p>
+    <input type="file" id="image-submit">
     <div class="flex-container">
       <canvas width="512" height="512" id="canvas"></canvas>
       <div id="rects"></div>
     </div>
-    <input type="file" id="image-submit">
     <script src="index.js"></script>
   </body>
 </html>
