added ability to reset data collection and calibrate test
- data collection can be reset if the user makes a mistake (w/o reloading image)
- test can now be calibrated

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <option value="pH">pH</option>
     </select>
     <input type="file" id="image-submit">
+    <button id="reset-data-collection">Reset Data Collection</button>
     <div class="flex-container">
       <canvas width="512" height="512" id="canvas"></canvas>
       <div id="rects"></div>
